crates/toon-schema/tests/compile_fail/unit_struct.rs
use serde::{Deserialize, Serialize};
use toon_schema::ToonSchema;

#[derive(ToonSchema, Serialize, Deserialize)]
#[toon_schema(description = "Unit struct test")]
struct UnitStruct;

fn main() {}
